src/objects/Budgets__c.object
<CustomObject>
    <description>Level 1 of the budgeting and planning hierarchy</description>
    <fields>
        <fullName>Allocated_to_Budget_Lines__c</fullName>
        <formula>if(OR(ISNULL(Budget_Amount__c),Budget_Amount__c &lt;= 0),0.00, ( Rollup_of_Unapproved_Budget_Lines__c +Rollup_of_Approved_Budget_Lines__c)  /  Budget_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Allocated to Budget Lines</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allocated_to_Programs__c</fullName>
        <formula>if(OR(ISNULL(Budget_Amount__c),Budget_Amount__c &lt;= 0),0.00, Rollup_of_Program_Budget_Amount__c  /  Budget_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Allocated to Programs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Budget_Amount__c</fullName>
        <label>Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Area__c</fullName>
        <label>Budget Area</label>
        <picklist>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Initiatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Projects</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Owner__c</fullName>
        <label>Budget Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Contract Spend Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTINGENCY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Spend Owner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contractor_Budget_Amount__c</fullName>
        <label>Contractor Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Contractors__c</fullName>
        <label>Number of Contractors</label>
        <summarizedField>Program_Budget__c.Number_of_Contractors__c</summarizedField>
        <summaryForeignKey>Program_Budget__c.Budget_Owner__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Original_Budget_Amount__c</fullName>
        <label>Original Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Percent_Spent__c</fullName>
        <formula>if(OR(ISNULL(Budget_Amount__c),Budget_Amount__c &lt;= 0),0.00,Rollup_of_Purchase_Request_Amount__c /  Budget_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Purchase Request Amount / Budget Amount (Level 1)</inlineHelpText>
        <label>% Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <referenceTo>Period__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rollup_of_Approved_Budget_Lines__c</fullName>
        <label>Rollup of Approved Budget Lines</label>
        <summarizedField>Program_Budget__c.Rollup_of_Budget_Lines__c</summarizedField>
        <summaryForeignKey>Program_Budget__c.Budget_Owner__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_of_Contractor_Amount_From_Program__c</fullName>
        <label>Rollup of Contractor Amount From Program</label>
        <summarizedField>Program_Budget__c.Rollup_of_Contractor_Budget_Lines__c</summarizedField>
        <summaryForeignKey>Program_Budget__c.Budget_Owner__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_of_Program_Budget_Amount__c</fullName>
        <label>Allocated Program Budget Amount</label>
        <summarizedField>Program_Budget__c.Program_Budget_Amount__c</summarizedField>
        <summaryForeignKey>Program_Budget__c.Budget_Owner__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_of_Purchase_Request_Amount__c</fullName>
        <label>Rollup of Purchase Request Amount</label>
        <summarizedField>Program_Budget__c.Rollup_of_Purchase_Request_Amount__c</summarizedField>
        <summaryForeignKey>Program_Budget__c.Budget_Owner__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_of_Unapproved_Budget_Lines__c</fullName>
        <label>Rollup of Unapproved Budget Lines</label>
        <summarizedField>Program_Budget__c.Rollup_of_Unapproved_Budget_Lines__c</summarizedField>
        <summaryForeignKey>Program_Budget__c.Budget_Owner__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Program_Contractor__c</fullName>
        <formula>Budget_Amount__c +  Rollup_of_Contractor_Amount_From_Program__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget (Program Spend+Contractor )</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unallocated_Budget_Line_Amount__c</fullName>
        <formula>Budget_Amount__c - ( Rollup_of_Approved_Budget_Lines__c +  Rollup_of_Unapproved_Budget_Lines__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount of Level 1 Budget that has not been allocated to a budget line</inlineHelpText>
        <label>Unallocated Budget Line Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unallocated_Program_Budget_Amount__c</fullName>
        <formula>Budget_Amount__c -  Rollup_of_Program_Budget_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unallocated Program Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>budget_owner_name_external__c</fullName>
        <externalId>true</externalId>
        <label>budget owner name external</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Budget</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Budget_Amount__c</columns>
        <columns>Unallocated_Program_Budget_Amount__c</columns>
        <columns>Budget_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Period__c</field>
            <operation>equals</operation>
            <value>fy11q3</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Budget</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <recordTypes>
        <fullName>Contractor_Spend</fullName>
        <active>false</active>
        <label>Contractor Spend</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program_Spend</fullName>
        <active>true</active>
        <label>Program Spend</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>